<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- NAMING STRINGS: -->
    <string name="app_name">ATMS391</string>
    <string name="menu_settings">Settings</string>
    <string name="sensorActivityDisplayMessage">SensorData</string>

    <!-- GUI STRINGS: -->
    <string name="captureSensorDataSwitchString">Capture</string>
    <string name="locationString">Location:</string>
    <string name="usesGpsString">Uses GPS:</string>
    <string name="azimuthString">Azimuth Angle:</string>
    <string name="collectorTiltAngleString">Collector Tilt Angle:</string>
    <string name="icString">Solar Insolation:</string>
    
    <!-- UNITS/SYMBOLS: -->
    <string name="wattsPerMeter">W/m\u00B2</string>
    <string name="degreeSymbol">°</string>
    <string name="percentSymbol">%</string>
    <string name="meters">m</string>
    
    <string name="emptyString"></string>

    <!-- MESSAGE/TOAST STRINGS -->
    <string name="betterLocationMayBeFoundString">GPS is currently disabled; to get the most accurate results please enable GPS</string>

    <!-- UserInputTabFragment STRINGS -->
    <string name="panelArea">Total Panel Area:</string>
    <string name="meterSquared">m\u00B2</string>
    <string name="two">2</string>
    <string name="panelEfficiency">Panel Efficiency:</string>
    <string name="percentSign">%</string>
    <string name="degreeSign">°</string>
    <string name="date">Date:</string>
    <string name="clockTime">Clock Time:</string>
    <string name="dateFormat">mm-dd-yyyy</string>
    <string name="timeFormat">hh:mm:ss</string>
    <string name="collectorTiltAngleUserInputTab">Collector Tilt Angle:</string>
    <string name="requiredFields">Date and Clock Time may be left blank.  Phone determined values will be used instead.</string>
    
    <!-- InsolationTabFragment STRINGS -->
    <string name="solarInsolationOnCollector_Ic">Solar Insolation on Collector:</string>
    <string name="beamInsolationOnCollector_Ibc">Beam Insolation on Collector:</string>
    <string name="diffuseInsolationOnCollector_Idc">Diffuse Insolation on Collector:</string>
    <string name="reflectedInsolationOnCollector_Irc">Reflected Insolation on Collector:</string>
    
    <!-- EnergyTabFragment STRINGS -->
    <string name="energyTabHeader">Your solar panel array would produce enough energy to power:</string>
    
    <!-- DetailsTabFragment STRINGS -->
    <string name="dayNumber">Day Number:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="collectorAzimuthAngle">Collector Azimuth Angle:</string>
    <string name="collectorTiltAngle">Collector Tilt Angle:</string>
    <string name="eMinutes">E[MINS]:</string>
    <string name="solarTime">Solar Time:</string>
    <string name="hourAngle">Hour Angle:</string>
    <string name="solarDeclination">Solar Declination:</string>
    <string name="solarAltitudeAngle">Solar Altitude Angle:</string>
    <string name="airMassRatio">Air Mass Ratio:</string>
    <string name="atmosphericOpticalDepth">Atmospheric Optical Depth:</string>
    <string name="apparentExtraterrestrialSolarInsolation">Apparent E.T. Solar Insolation:</string>
    <string name="solarAzimuthAngle">Solar Azimuth Angle:</string>
    <string name="solarIncidenceAngle">Solar Incidence Angle:</string>
    <string name="skyDiffuseFactor">Sky Diffuse Factor:</string>
    <string name="beamInsolationAtEarthsSurface">Beam Insolation at Surface:</string>
    
    <!-- DEBUGGING STRINGS: OVERWRITTEN BY APPLICATION -->
    <string name="placeholder">VALUE</string>
    <string name="locationDataString">LocationData</string>
    <string name="usesGpsDataString">UsesGpsData</string>
    <string name="azimuthDataString">AZIMUTH_DATA</string>
    <string name="collectorTiltAngleDataString">TILT_DATA</string>
    <string name="icDataString">INSOLATION_DATA</string>
    <string name="debuggingMessageBoxString">DEBUGGING MESSAGE BOX</string>
</resources>