<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- LocationTextView: -->
        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/locationString" />
        
        <!-- LocationDataTextView -->
        <TextView
            android:id="@+id/locationDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/locationTextView"
            android:layout_alignBottom="@+id/locationTextView"
            android:layout_toRightOf="@+id/locationTextView"
            android:layout_marginLeft="160dp"
            android:text="@string/placeholder" />
        
        <!-- ClockTimeTextView: -->
        <TextView
            android:id="@+id/clockTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/locationTextView"
            android:text="@string/clockTime" />
        
        <!-- ClockTimeDataTextView: -->
        <TextView
            android:id="@+id/clockTimeDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dayNumberTextView"
            android:layout_alignLeft="@+id/locationDataTextView"
            android:text="@string/placeholder" />
        
        <!-- DayNumberTextView: -->
        <TextView 
            android:id="@+id/dayNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/clockTimeTextView"
            android:text="@string/dayNumber" />
        
        <!-- CollectorTiltAngleTextView: -->
        <TextView 
            android:id="@+id/collectorTiltAngleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/dayNumberTextView"
            android:text="@string/collectorTiltAngle" />
        
        <!-- CollectorAzimuthAngleTextView: -->
        <TextView
            android:id="@+id/collectorAzimuthAngleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/collectorTiltAngleTextView"
            android:text="@string/collectorAzimuthAngle" />
        
        <!-- SolarAzimuthAngleTextView: -->
        <TextView
            android:id="@+id/solarAzimuthAngleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/collectorAzimuthAngleTextView"
            android:text="@string/solarAzimuthAngle" />
    </RelativeLayout>

</ScrollView>